Add first test result + slight modification on the notebook

--- a/online_label_recovery.ipynb
+++ b/online_label_recovery.ipynb
@@ -778,15 +778,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Completed at  0.0  % BER =  0.41338  for  SNR =  0  dB  with nb_tries =  50 .\n",
-      "Completed at  7.0  % BER =  0.37762  for  SNR =  1  dB  with nb_tries =  50 .\n",
-      "Completed at  15.0  % BER =  0.32534  for  SNR =  2  dB  with nb_tries =  50 .\n",
-      "Completed at  23.0  % BER =  0.24436  for  SNR =  3  dB  with nb_tries =  50 .\n",
-      "Completed at  30.0  % BER =  0.169  for  SNR =  4  dB  with nb_tries =  50 .\n",
-      "Completed at  38.0  % BER =  0.09448  for  SNR =  5  dB  with nb_tries =  50 .\n",
-      "Completed at  46.0  % BER =  0.03622  for  SNR =  6  dB  with nb_tries =  50 .\n",
-      "Completed at  53.0  % BER =  0.011019607843137255  for  SNR =  7  dB  with nb_tries =  51 .\n",
-      "Completed at  61.0  % BER =  0.002683333333333333  for  SNR =  8  dB  with nb_tries =  60 .\n"
+      "Completed at  0.0  % BER =  0.41534  for  SNR =  0  dB  with nb_tries =  50 .\n",
+      "Completed at  7.0  % BER =  0.3755  for  SNR =  1  dB  with nb_tries =  50 .\n",
+      "Completed at  15.0  % BER =  0.32132  for  SNR =  2  dB  with nb_tries =  50 .\n",
+      "Completed at  23.0  % BER =  0.25208  for  SNR =  3  dB  with nb_tries =  50 .\n",
+      "Completed at  30.0  % BER =  0.16836  for  SNR =  4  dB  with nb_tries =  50 .\n",
+      "Completed at  38.0  % BER =  0.09136  for  SNR =  5  dB  with nb_tries =  50 .\n",
+      "Completed at  46.0  % BER =  0.03432  for  SNR =  6  dB  with nb_tries =  50 .\n",
+      "Completed at  53.0  % BER =  0.00984  for  SNR =  7  dB  with nb_tries =  50 .\n",
+      "Completed at  61.0  % BER =  0.002370967741935484  for  SNR =  8  dB  with nb_tries =  62 .\n",
+      "Completed at  69.0  % BER =  0.0003574468085106383  for  SNR =  9  dB  with nb_tries =  235 .\n"
      ]
     }
    ],
@@ -842,7 +843,6 @@
     "# Creation of the PHY Layer\n",
     "phy_layer = PHY_Layer(emiter, receiver, awgn_channel)\n",
     "\n",
-    "# for ind_snr in range(len(snr_db)):\n",
     "ind_snr = 0\n",
     "while (ind_snr < len(snr_db)) and (\n",
     "    not (ind_snr > 0) or (ber[ind_snr - 1] > 0 and nb_tries < max_test)\n",
@@ -894,13 +894,13 @@
     "}\n",
     "\n",
     "# Save results in file\n",
-    "filename = \"./results/OFDM_equalizer_{}_non_lin_coeff_{}_iq_imbalance_{}_snr_{}_to_{}_step_{}}.pickle\".format(\n",
+    "filename = \"./results/OFDM_equalizer_{}_non_lin_coeff_{}_iq_imbalance_{}_snr_{}_to_{}_step_{}.pickle\".format(\n",
     "    str(equalizer),\n",
     "    str(non_lin_coeff),\n",
     "    str(iq_imbalance),\n",
     "    str(min_snr),\n",
     "    str(max_snr),\n",
-    "    str(step),\n",
+    "    str(step_db),\n",
     ")\n",
     "\n",
     "with open(filename, \"wb\") as handle:\n",
