Commit for feedback update

--- a/online_label_recovery.ipynb
+++ b/online_label_recovery.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -44,29 +44,29 @@
       "Requirement already satisfied: matplotlib2tikz in /usr/local/lib/python3.6/dist-packages (0.7.4)\n",
       "Requirement already satisfied: torch in /home/eric/.local/lib/python3.6/site-packages (1.0.1.post2)\n",
       "Requirement already satisfied: numpy>=1.8.2 in /home/eric/.local/lib/python3.6/site-packages (from scipy) (1.16.2)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/eric/.local/lib/python3.6/site-packages (from matplotlib) (1.0.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /home/eric/.local/lib/python3.6/site-packages (from matplotlib) (2.8.0)\n",
       "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/eric/.local/lib/python3.6/site-packages (from matplotlib) (2.4.0)\n",
       "Requirement already satisfied: cycler>=0.10 in /home/eric/.local/lib/python3.6/site-packages (from matplotlib) (0.10.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in /home/eric/.local/lib/python3.6/site-packages (from matplotlib) (2.8.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/eric/.local/lib/python3.6/site-packages (from matplotlib) (1.0.1)\n",
       "Requirement already satisfied: six in /home/eric/.local/lib/python3.6/site-packages (from matplotlib2tikz) (1.12.0)\n",
       "Requirement already satisfied: Pillow in /usr/lib/python3/dist-packages (from matplotlib2tikz) (5.1.0)\n",
       "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from kiwisolver>=1.0.1->matplotlib) (40.8.0)\n",
       "Collecting git+git://github.com/veeresht/CommPy.git@master\n",
-      "  Cloning git://github.com/veeresht/CommPy.git (to revision master) to /tmp/pip-req-build-comtjm98\n",
-      "  Running command git clone -q git://github.com/veeresht/CommPy.git /tmp/pip-req-build-comtjm98\n",
+      "  Cloning git://github.com/veeresht/CommPy.git (to revision master) to /tmp/pip-req-build-g55bkbpv\n",
+      "  Running command git clone -q git://github.com/veeresht/CommPy.git /tmp/pip-req-build-g55bkbpv\n",
       "Requirement already satisfied (use --upgrade to upgrade): scikit-commpy==0.3.0 from git+git://github.com/veeresht/CommPy.git@master in /home/eric/.local/lib/python3.6/site-packages\n",
       "Requirement already satisfied: numpy in /home/eric/.local/lib/python3.6/site-packages (from scikit-commpy==0.3.0) (1.16.2)\n",
       "Requirement already satisfied: scipy in /home/eric/.local/lib/python3.6/site-packages (from scikit-commpy==0.3.0) (1.2.1)\n",
       "Requirement already satisfied: matplotlib in /home/eric/.local/lib/python3.6/site-packages (from scikit-commpy==0.3.0) (3.0.3)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/eric/.local/lib/python3.6/site-packages (from matplotlib->scikit-commpy==0.3.0) (2.4.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/eric/.local/lib/python3.6/site-packages (from matplotlib->scikit-commpy==0.3.0) (0.10.0)\n",
       "Requirement already satisfied: python-dateutil>=2.1 in /home/eric/.local/lib/python3.6/site-packages (from matplotlib->scikit-commpy==0.3.0) (2.8.0)\n",
       "Requirement already satisfied: kiwisolver>=1.0.1 in /home/eric/.local/lib/python3.6/site-packages (from matplotlib->scikit-commpy==0.3.0) (1.0.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/eric/.local/lib/python3.6/site-packages (from matplotlib->scikit-commpy==0.3.0) (0.10.0)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/eric/.local/lib/python3.6/site-packages (from matplotlib->scikit-commpy==0.3.0) (2.4.0)\n",
-      "Requirement already satisfied: six>=1.5 in /home/eric/.local/lib/python3.6/site-packages (from python-dateutil>=2.1->matplotlib->scikit-commpy==0.3.0) (1.12.0)\n",
+      "Requirement already satisfied: six in /home/eric/.local/lib/python3.6/site-packages (from cycler>=0.10->matplotlib->scikit-commpy==0.3.0) (1.12.0)\n",
       "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from kiwisolver>=1.0.1->matplotlib->scikit-commpy==0.3.0) (40.8.0)\n",
       "Building wheels for collected packages: scikit-commpy\n",
       "  Building wheel for scikit-commpy (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Stored in directory: /tmp/pip-ephem-wheel-cache-px9cg_z1/wheels/d1/6a/31/8ddc70e8eb8a1c3ad344032ed43b4ebfccc41007e8850226d0\n",
+      "\u001b[?25h  Stored in directory: /tmp/pip-ephem-wheel-cache-0awut948/wheels/d1/6a/31/8ddc70e8eb8a1c3ad344032ed43b4ebfccc41007e8850226d0\n",
       "Successfully built scikit-commpy\n",
       "================== DONE ! ==================\n"
      ]
@@ -206,10 +206,10 @@
     "data_set_generation_param_dict = {\n",
     "    \"eb_n0_db\": 50,\n",
     "    \"channel_parameters\": {\n",
-    "        \"channel_type\": \"Proakis_C\",\n",
+    "        \"channel_type\": \"AWGN\",#\"Proakis_C\",\n",
     "        \"non_lin_coeff\": 0.5,\n",
     "        \"iq_imbalance\": 0.5,\n",
-    "        \"channel_taps\": np.array([1, 2, 3, 2, 1]),\n",
+    "        \"channel_taps\": np.array([1]),#np.array([1, 2, 3, 2, 1]),\n",
     "    },\n",
     "    \"frame_length\": 6000060,#2000140, # 1000040\n",
     "    \"modulation\": {\n",
@@ -979,7 +979,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
